--- a/presentation/java 内存管理与实践.key/Metadata/BuildVersionHistory.plist
+++ b/presentation/java 内存管理与实践.key/Metadata/BuildVersionHistory.plist
@@ -5,5 +5,6 @@
 	<string>Template: New_Template4 (2013-12-16 11:08)</string>
 	<string>M6.1-1769-1</string>
 	<string>M6.2-1861-1</string>
+	<string>M6.2.2-1878-1</string>
 </array>
 </plist>
